name:                hamilton-gloss-multi-pendulum
version:             0.1.0.0
homepage:            https://github.com/lotz84/hamilton-gloss-multi-pendulum#readme
license:             BSD3
license-file:        LICENSE
author:              Tatsuya Hirose
maintainer:          tatsuya.hirose.0804@gmail.com
copyright:           2017 Tatsuya Hirose
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pendulum.Model
                     , Pendulum.View
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , vector
                     , vector-sized
                     , hmatrix
                     , hamilton
  default-language:    Haskell2010

executable hamilton-gloss-multi-pendulum-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gloss
                     , vector-sized
                     , hmatrix
                     , hamilton
                     , hamilton-gloss-multi-pendulum
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lotz84/hamilton-gloss-multi-pendulum
